--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,16 @@
     <p class="lead">Easily report or find lost items in your campus or community.</p>
 
     <div class="mt-4">
-        <!-- Fixed: route name changed from 'submit' to 'add_item' -->
+        <!-- ✅ Fixed: use correct Flask endpoint names -->
         <a href="{{ url_for('add_item') }}" class="btn btn-primary btn-lg m-2">Report an Item</a>
         <a href="{{ url_for('show_items') }}" class="btn btn-success btn-lg m-2">View All Items</a>
         <a href="{{ url_for('search') }}" class="btn btn-info btn-lg m-2">Search Lost Items</a>
     </div>
 
     <div class="mt-5">
-        <img src="{{ url_for('static', filename='images/lostfound.png') }}" 
-             alt="Lost and Found" 
-             class="img-fluid rounded shadow" 
+        <img src="{{ url_for('static', filename='images/lostfound.png') }}"
+             alt="Lost and Found"
+             class="img-fluid rounded shadow"
              style="max-width: 400px;">
     </div>
 
