Fix wrong route 'submit' to 'add_item'

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
     <div class="mt-4">
         <!-- ✅ Fixed: use correct Flask endpoint names -->
-        <a href="{{ url_for('add_item') }}" class="btn btn-primary btn-lg m-2">Report an Item</a>
+        <a href="{{ url_for('add_item') }}" class="btn btn-primary">Report an item</a>
         <a href="{{ url_for('show_items') }}" class="btn btn-success btn-lg m-2">View All Items</a>
         <a href="{{ url_for('search') }}" class="btn btn-info btn-lg m-2">Search Lost Items</a>
     </div>
